src/objects/BFM_CC_e__c.object
<CustomObject>
    <fields>
        <fullName>CC_e_Duplicate_Record_Status__c</fullName>
        <label>CC-e Duplicate Check Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_e_Key__c</fullName>
        <externalId>true</externalId>
        <label>CC-e Key</label>
        <length>52</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_e_Link_Check_Status__c</fullName>
        <label>CC-e Link Check Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_e_Sefaz_Check_Status__c</fullName>
        <label>CC-e Sefaz Check Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_e_Status__c</fullName>
        <label>CC-e Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_e_Valid_CNPJ_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CC-e Valid CNPJ Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CC_e_Valid_CNPJ_Status__c</fullName>
        <label>CC-e CNPJ Check Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_e_emission_date__c</fullName>
        <label>CC-e emission date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CNPJ_Issuer__c</fullName>
        <label>CNPJ Issuer</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CNPJ_Service_Taker__c</fullName>
        <label>CNPJ Service Taker</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTe__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CT-e Related Fields</label>
        <referenceTo>BFM_CT_e__c</referenceTo>
        <relationshipName>CC_es</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Carrier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Carrier</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CC-es</relationshipLabel>
        <relationshipName>CC_es</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_File_Path__c</fullName>
        <label>External File Path</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NF_e_DF__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NF-e DF</label>
        <referenceTo>BFM_NF_e_DF__c</referenceTo>
        <relationshipName>CC_es</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reference_Object_Type__c</fullName>
        <label>Reference Object Type</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_CT_e_NF_e_DF_Key__c</fullName>
        <label>Related CT-e/NF-e (DF) Key</label>
        <length>44</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Taker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Taker</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CC-es (Service Taker)</relationshipLabel>
        <relationshipName>CC_es1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Uploaded_File_Name__c</fullName>
        <label>Uploaded File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CC-e</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CCE-{000000}</displayFormat>
        <label>CC-e Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC-es</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>